--- a/src/main/webapp/openlmis-table/table-forms.scss
+++ b/src/main/webapp/openlmis-table/table-forms.scss
@@ -61,7 +61,7 @@ that is not nessicarry.
 Styleguide 4.5
 */
 
-table td.form-control {
+td.form-control {
   display: table-cell;
   width: auto;
   border-radius: 0px;
@@ -79,6 +79,52 @@ table td.form-control {
     &:focus,
     &:disabled {
       box-shadow: inset 0 0 0em $light-gray;
+    }
+  }
+}
+
+tr:nth-child(2n+1) td.form-control{
+  > input[type="text"],
+  > input[type="password"],
+  > input[type="number"],
+  > select {
+    background-color: $background-color-alt;
+  }
+}
+
+td,
+th,
+td.form-control {
+  > input[type="checkbox"]:first-child + > label:last-child,
+  > input[type="checkbox"]:last-child + > label:first-child{
+    position: absolute;
+    top: -100em;    
+  }
+  > label:last-child + > input[type="checkbox"]:first-child,
+  > label:first-child + > input[type="checkbox"]:last-child,
+  > input[type="checkbox"]:first-child:last-child{
+    display: block;
+    margin: 0px auto;
+  }
+}
+
+td > label.checkbox {
+  &:first-child:last-child{
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    text-indent: -30000em;
+    > input[type="checkbox"]{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateY(-50%) translateX(-50%);
+      margin: 0px;
     }
   }
 }
