--- a/src/main/webapp/openlmis-table/tbody-title.scss
+++ b/src/main/webapp/openlmis-table/tbody-title.scss
@@ -8,7 +8,7 @@ group, use a `<tbody>` element to group the items together.
 row of the table, which will be treated as a title element. See the [tbody-title
 directive for more details.](../../docs/#/api/openlmis.table:tbodyTitle)
 
-<table>
+<table class="openlmis-table">
   <thead>
     <tr>
       <th>Fully Supply</th>
