--- a/src/main/webapp/common/headers.scss
+++ b/src/main/webapp/common/headers.scss
@@ -17,8 +17,10 @@ markup:
 Styleguide 1.1
 */
 
+$heading-color: $gray !default;
+
 h1, h2, h3, h4, h5, h6{
-	color: $heading-green;
+	color: $heading-color;
 	display: block;
 	clear: both;
 	font-weight: normal;
