--- a/src/main/webapp/common/page-hero.scss
+++ b/src/main/webapp/common/page-hero.scss
@@ -2,10 +2,10 @@
 .page-hero {
 	position: relative;
 	font-family: 'HelveticaNeue-CondensedBold', Arial, sans-serif;
-	color: $medium-gray;
+	color: $gray;
 	font-size: 3em;
 	h1, h2, h3, h4, h5, .title, .subtitle{
-		color: $medium-gray;
+		color: $gray;
 		line-height: 1.2em;
 		border-width: 0;
 	}
