--- a/src/main/webapp/common/aside.scss
+++ b/src/main/webapp/common/aside.scss
@@ -6,7 +6,7 @@
   margin-bottom: 1em;
   
   @include box-shadow(0.2em 0.2em 0 $light-shadow);
-  border: 0.1em solid $medium-gray;
+  border: 0.1em solid $gray;
   text-shadow: 0 0.1em 0 white;
 
   > button.close {
