--- a/src/main/webapp/requisition-product-grid/product-grid.scss
+++ b/src/main/webapp/requisition-product-grid/product-grid.scss
@@ -30,6 +30,32 @@
 	}
 }
 
+.requisition-product-grid-cell{
+	&.has-popover {
+		padding-right: 2em !important;
+		> .show-popover {
+			@include icon-only("exclamation-circle");
+			position: absolute;
+			top: 0px;
+			right: 0px;
+			width: 2em;
+			height: 100%;
+			color: $brand-danger;
+			&::before{
+				transform: translateX(-50%) translateY(-15%);
+			}
+		}
+	}
+}
+
+tr.invalid-row > td.requisition-product-grid-cell{
+	> input[type="text"],
+	> input[type="number"],
+	> select {
+		background-color: $background-color-danger;
+	}
+}
+
 .cell-error-message {
 	color: $red;
 }
