--- a/src/main/webapp/common/icon.mixins.scss
+++ b/src/main/webapp/common/icon.mixins.scss
@@ -22,9 +22,10 @@
   text-indent: -20000em;
   &::before{
     position: absolute;
-    top:0px;
-    left: 0px;
+    top:50%;
+    left: 50%;
     text-indent: 0em;
+    transform: translateX(-50%) translateY(-50%);
   }
 }
 
