OLMIS-1808: Updated table caption styles

--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -15,6 +15,8 @@ $black: #000000;
 $shadow: rgba($black, 0.75);
 $light-shadow: rgba($black, 0.075);
 
+$font-family: Arial, sans-serif;
+
 $font-size: 14px;
 $font-size-large: 22px;
 $font-size-extra-large: 36px;
