--- a/src/main/webapp/openlmis-table/tbody-title.scss
+++ b/src/main/webapp/openlmis-table/tbody-title.scss
@@ -16,7 +16,7 @@ directive for more details.](../../docs/#/api/openlmis.table:tbodyTitle)
       <th>Name</th>
       <th>Strength</th>
       <th>Unit of measure</th>
-      <th></th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody title="Table section title #1">
