--- a/src/main/webapp/common/base.scss
+++ b/src/main/webapp/common/base.scss
@@ -27,7 +27,7 @@ Styleguide 1.0
 
 body {
   background-color: $background-color-dark;
-  font-family: Arial, sans-serif;
+  font-family: $font-family;
   height: 100%;
   display: flex;
   flex-direction: column;
