OLMIS-1807: Applied correct button color

--- a/src/main/webapp/requisition-summary/requisition-summary.scss
+++ b/src/main/webapp/requisition-summary/requisition-summary.scss
@@ -31,9 +31,8 @@ aside.requisition-summary {
     }
 
     > button {
-        @include button($brand-primary);
-        @include button-icon-only("list");
-        
+        @extend button.primary;
+        @include button-icon-only("list");        
     }
 }
 
