--- a/src/main/webapp/openlmis-table/openlmis-table-container.scss
+++ b/src/main/webapp/openlmis-table/openlmis-table-container.scss
@@ -8,14 +8,16 @@ functionality, wrap the table within a table container, which will constrain
 the layout of form elements and captions within a table. **Any table wider than
 the display area will horizontally scroll.**
 
-All `.openlmis-table-container` children that are not the table will be displayed
-to the left of the actual container. There will be no effort made to guess the
-size of the elements within the `.openlmis-table-container`. *The exception to
-this is the
-[table-sort-order form.](../../docs/#/api/openlmis.table:table-sort-order)*
+All child elements of the `.openlmis-table-container` element will be placed 
+inside the `.toolbar` element inside the table container, except for any `<form>`
+or `<openlmis-pagination>` which have unique behaviors.
 
-All elements within a `.openlmis-table-container` will be pinned, so they are all
-visible and aligned while a user is scrolling what could be a large table.
+`<form>` elements will be placed to the left of the table.
+
+`<openlmis-pagination>` will be placed immedately below the `<table>` element.
+
+*NOTE:* Don't use `ng-if` to show or hide immediate child elements of
+*`.openlmis-table-container` — it will break the layout.
 
 ### Form Guidelines
 Any form that modifies a table should use the `aria-described-by` attribute. This
@@ -134,6 +136,12 @@ Styleguide 4.1
             order: 0;
             margin: 0em 0.5em;
             width: $sidebar-width;
+            &:first-child{
+              margin-left: 0em;
+            }
+            &:last-child{
+              margin-right: 0em;
+            }
         }
 
         > .main {
