--- a/src/main/webapp/openlmis-form/form-controls.scss
+++ b/src/main/webapp/openlmis-form/form-controls.scss
@@ -30,6 +30,7 @@ Styleguide 3.3
 	border-style: solid;
 	border-radius: $border-radius;
 	box-shadow: inset 0 0 0.5em $light-gray;
+	color: $dark-gray;
 	&:focus,
 	&.is-focused {
 	  border-color: $brand-primary;
@@ -39,6 +40,7 @@ Styleguide 3.3
 	&.is-disabled {
 	  box-shadow: 0 0 0 $light-gray;
 	  color: $gray;
+	  background-color: transparent;
 	}
 }
 
