--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -29,7 +29,7 @@ $background-color-alt: #f0f0f0;
 $background-color-dark: $dark-gray;
 $background-color-danger: lighten($brand-danger, 45);
 
-$text-color: $dark-gray;
+$text-color: $gray;
 $text-color-disabled: $gray;
 
 $heading-color: $gray;
