--- a/src/main/webapp/common/aside.scss
+++ b/src/main/webapp/common/aside.scss
@@ -3,11 +3,9 @@
   position: relative;
 
   padding: 1em;
-  margin-bottom: 1em;
-  
-  @include box-shadow(0.2em 0.2em 0 $light-shadow);
-  border: 0.1em solid $gray;
-  text-shadow: 0 0.1em 0 white;
+
+  background-color: $background-color-alt;
+  border: 1px solid $light-gray;
 
   > button.close {
     position: absolute;
