--- a/src/main/webapp/common/headers.scss
+++ b/src/main/webapp/common/headers.scss
@@ -5,14 +5,26 @@ This is how headings should be used.
 
 markup:
 <h1>Primary Title<h1>
-<section>
-	<h2>Secondary Title</h2>
-	<h3>Tritary Title</h3>
-	<h4>Example Title</h4>
-	<h5>H5 Titles Probably Will Never be Used</h5>
-	<h6>H6 Titles Shouldn't be Used Unless There is a Good Reason</h6>
-</section>
-<span class="title">Just in Case Something Must be a Title</span>
+<h2>Secondary Title</h2>
+<h3>Tritary Title</h3>
+<h4>Example Title</h4>
+<h5>H5 Titles Probably Will Never be Used</h5>
+<h6>H6 Titles Shouldn't be Used Unless There is a Good Reason</h6>
+
+<div class="heading">
+	<div class="title">Heading Title</div>
+	<button>Example Button</button>
+</div>
+
+<div class="sub-heading">
+	<div class="title">Heading Title</div>
+	<button>Example Button</button>
+</div>
+
+<div class="minor-heading">
+	<div class="title">Heading Title</div>
+	<button>Example Button</button>
+</div>
 
 Styleguide 1.1
 */
@@ -27,7 +39,7 @@ h1, h2, h3, h4, h5, h6{
 	font-size: $font-size;
 	line-height: 1.2em;
 	margin: 0px;
-	padding: 1em 0em 0em
+	padding: 0em;
 }
 
 h1, h2 {
@@ -37,4 +49,62 @@ h1, h2 {
 
 h1, h3{
 	font-weight: bold;
+}
+
+header {
+	display: flex;
+	flex-wrap: nowrap;
+	align-items: center;
+	position: relative;
+
+	> * {
+		flex: 0 0 auto;
+		margin: 0em 1em;
+		&:first-child {
+			margin-left: 0em;
+		}
+		&:last-child {
+			margin-right: 0em;
+		}
+	}
+
+	> h1, > h2, > h3, > h4 > h5, > h6,
+	> .title {
+		flex-grow: 1;
+	}
+}
+
+header,
+.heading {
+	border-bottom: $heading-color 1px solid;
+	padding: 0.5em 0em;
+}
+
+.sub-heading,
+header.sub-heading {
+	border-bottom-width: 0px;
+
+	> h1, > h2, > h3, > h4 > h5, > h6,
+	> .title {
+		position: relative;
+		z-index: 2;
+		padding: 0em 1em;
+		text-shadow: 0px 0px 4px $background-color, 5px 0px 0 $background-color, -5px 0px 0 $background-color, -3px 0px 0 $background-color, 3px 0px 0 $background-color;
+		&::after {
+			content: " ";
+			display: block;
+			position: absolute;
+			top: 50%;
+			left: 0px;
+			z-index: -1;
+			width: 100%;
+			border-bottom: $heading-color 1px solid;
+		}
+	}
+}
+
+.minor-heading {
+	background-color: $background-color-alt;
+	border-bottom: 0px;
+	padding: 0.5em 1em;
 }
