--- a/src/main/webapp/openlmis-form/form.scss
+++ b/src/main/webapp/openlmis-form/form.scss
@@ -115,6 +115,12 @@ form {
   > fieldset > legend {
     margin-top: 0.5em;
     margin-bottom: 0.2em;
+
+	&.required:after {
+		color: $red;
+		content: '*';
+		margin-left: 0.25em;
+	}
   }
 
 	> input[type="submit"],
@@ -180,7 +186,7 @@ fieldset > legend {
   border-bottom-width: 0px;
 }
 form > fieldset:first-child {
-  margin-top: 0px; 
+  margin-top: 0px;
   > legend:first-child {
     padding-top: 0px;
     margin-top: 0px;
@@ -221,4 +227,3 @@ input[type="number"] {
         color: black;
     }
 }
-
